# dagster-capstone

./: .gitignore  README.md  pyproject.toml
.tmp_dagster_home_8goh2thj/history/: runs.db
.tmp_dagster_home_8goh2thj/history/runs/: .db  index.db
.tmp_dagster_home_8goh2thj/schedules/: schedules.db
data/raw/landing/: patients.parquet
src/capstone/: dbx_test.py
src/capstone/defs/assets/: partitions.py  patients.py
